# netherite

./: Cargo.toml  README.md
src/: main.rs  mc.rs  module.rs  platform.rs  prelude.rs  registry.rs  version.rs
src/cmd/: add.rs  install.rs  list.rs  mod.rs  prelude.rs  remove.rs
