[package]
name = "netherite"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chksum-md5 = "0.1.0"
clap = { version = "4.5.21", features = ["derive", "string"] }
colored = "2.1.0"
curl = "0.4.46"
dirs = "5.0.1"
inquire = "0.7.5"
pubgrub = "0.2.1"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_with = "3.11.0"
spdx = "0.10.7"
symlink = "0.1.0"
thiserror = "2.0.4"
toml = "0.8.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
whoami = "1.5.2"
